--- a/index..html
+++ b/index..html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width-device-width,initial-scale1.0" />
       <title>frontend mentor</title>
-      <link rel="stylesheet" href="qrcode.css" type="text/css" />
+      <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
       <div class="container">
